added body part

--- a/index.html
+++ b/index.html
@@ -24,5 +24,21 @@
         </div>
 
     </div>
+<!-- navbar work closed........
+ ................................ -->
+<div class="body-container">
+    
+    <div class="first-img">
+        <img src="image/webpng1.png" alt="" class="img1">
+        <h3>Neural Network</h3>
+    </div>
+    <div class="first-p">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ducimus non, delectus rerum nemo magni <br>error quia quaerat quam maxime ex sed, eos alias <br>reprehenderit quasi debitis recusandae aspernatur perferendis harum! Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Ullam quis mollitia temporibus odio inventore dolores consectetur,<br> voluptates, aspernatur obcaecati, officia eligendi tempora quia aperiam vero suscipit maxime corrupti atque dolore.</p>        
+
+    </div>
+    
+
+</div>
+
 </body>
 </html>
