added card on body

--- a/index.html
+++ b/index.html
@@ -40,5 +40,41 @@
 
 </div>
 
+<!-- body 1st pard closed.............
+ ...................................... -->
+
+ <div class="card-container">
+    <div class="card1">
+        <img src="image/web2.jpg" alt="" class="card1-img">
+        <h1>Neural Network</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam unde voluptates commodi consequuntur,<br> esse sint similique? Blanditiis, odit nihil iure quasi temporibus eligendi quo, numquam consequuntur aliquam harum veritatis impedit?</p><br>
+
+        <button class="card-btn">Read More</button>
+
+    </div>
+    <div class="card1">
+        <img src="image/web3.jpg" alt="" class="card1-img">
+        <h1>Neural Network</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam unde voluptates commodi consequuntur,<br> esse sint similique? Blanditiis, odit nihil iure quasi temporibus eligendi quo, numquam consequuntur aliquam harum veritatis impedit?</p><br>
+        <button class="card-btn">Read More</button>
+
+    </div>
+    <div class="card1">
+        <img src="image/web4.png" alt="" class="card1-img img3rd">
+        <h1>Neural Network</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam unde voluptates commodi consequuntur,<br> esse sint similique? Blanditiis, odit nihil iure quasi temporibus eligendi quo, numquam consequuntur aliquam harum veritatis impedit?</p><br>
+        <button class="card-btn">Read More</button>
+
+    </div>
+    <div class="card1">
+        <img src="image/web5.jpg" alt="" class="card1-img img3rd">
+        <h1>Neural Network</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam unde voluptates commodi consequuntur,<br> esse sint similique? Blanditiis, odit nihil iure quasi temporibus eligendi quo, numquam consequuntur aliquam harum veritatis impedit?</p><br>
+        <button class="card-btn">Read More</button>
+
+    </div>
+
+ </div>
+
 </body>
 </html>
